# KaSim

./: CHANGES.md  Makefile  Makefile.patch  TODO.md  demo.sh
KaSa_rep/abstract_domains/mvbdu/: mvbdu_wrapper.ml  mvbdu_wrapper.mli
KaSa_rep/data_structures/: graphs.ml  graphs.mli  int_storage.ml
KaSa_rep/data_structures/affine_arithmetics/: fraction.ml  mat_inter.ml  mat_inter.mli  multiset.ml
KaSa_rep/data_structures/mvbdu/: boolean_mvbdu.ml  list_algebra.ml  mvbdu_algebra.ml  mvbdu_test.ml  mvbdu_wrapper.ml  mvbdu_wrapper.mli
KaSa_rep/frontend/: print_handler.ml
KaSa_rep/frontend/preprocess/: build_graph.ml  build_graph.mli  ckappa_sig.ml  ckappa_sig.mli
KaSa_rep/logic_encoding/: dune  logic_encoding.ml  logic_encoding.mli
KaSa_rep/logic_encoding/demo/: 001.ka  002.ka
KaSa_rep/logic_encoding/demo/output/001/: contact.dot  influence.dot
KaSa_rep/logic_encoding/demo/output/002/: contact.dot  influence.dot
KaSa_rep/main/: KaSa.ml  dune
KaSa_rep/more_datastructures/: graphs.ml  graphs.mli
KaSa_rep/reachability_analysis/: counters_domain.ml  graph_decision_tree.ml  graph_decision_tree.mli  simple_cycle.ml
cli/: kasim_args.ml
ide/: org.kappa.app.json
js/: package-lock.json  package.json
main/: KaSim.ml
models/test_suite/unit_tests/sanity/output/: LOG.ref
siteGraphs/: navigation.ml  navigation.mli
term/: pattern.ml  pattern.mli
viz/: atom-ui.css  index.html  index.js  webpack.config.js
